[package]
name = "nahpu_archive"
version = "0.1.0"
edition = "2024"
authors = ["Heru Handika <herubiolog@gmail.com>"]
description = "A utility crate for archiving and extracting Nahpu project data."
repository = "https://github.com/hhandika/nahpu_api"
license = "MIT"
keywords = ["nahpu", "archive", "zip"]
categories = ["compression"]
readme = "README.md"
homepage = "https://www.nahpu.app/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.1.*"
zip = "8.6.*"

[dev-dependencies]
tempfile = "3"
