[package]
name = "nahpu_archive"
version = "0.2.0"
edition = "2024"
authors = ["Heru Handika <herubiolog@gmail.com>"]
description = "Archive utilities for ZIP, gzip, and tar.gz files used by NAHPU."
repository = "https://github.com/hhandika/nahpu_api"
license = "MIT"
keywords = ["nahpu", "archive", "zip", "gzip", "tar"]
categories = ["compression"]
readme = "README.md"
homepage = "https://www.nahpu.app/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.1.*"
tar = "0.4"
zip = "8.6.*"

[dev-dependencies]
tempfile = "3"
