[package]
name = "nahpu_configs"
version = "0.4.0"
edition = "2024"
authors = ["Heru Handika <herubiolog@gmail.com>"]
description = "A utility crate for managing user configuration and document presets for NAHPU."
repository = "https://github.com/hhandika/nahpu_api"
license = "MIT"
keywords = ["nahpu", "config", "settings"]
categories = ["science", "database-implementations"]
readme = "README.md"
homepage = "https://www.nahpu.app/"

[dependencies]
redb = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
