[package]
name = "nahpu_db"
version = "0.1.2"
edition = "2024"
authors = ["Heru Handika <herubiolog@gmail.com>"]
homepage = "https://www.nahpu.app/"
description = "A utility crate for handling database schema and models, auto-generating Rust structs from the NAHPU SQLite Drift schema."
repository = "https://github.com/hhandika/nahpu_api"
license = "MIT"
keywords = ["nahpu", "database", "sqlite", "drift", "schema"]
categories = ["data-structures", "science"]
readme = "README.md"


[dependencies]
calamine = { version = "0.35.0", features = ["dates"] }
csv = "1.3"
rust_xlsxwriter = { version = "0.95.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[build-dependencies]
heck = "0.5.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "native-tls"] }
sqlparser = "0.62.0"

[dev-dependencies]
serde_json = "1.0.150"
