[package]
name = "nahpu_dp"
version = "0.1.0"
edition = "2024"
authors = ["Heru Handika <herubiolog@gmail.com>"]
description = "Create and validate reproducible Frictionless Data Packages for NAHPU."
repository = "https://github.com/hhandika/nahpu_api"
homepage = "https://www.nahpu.app/"
documentation = "https://docs.rs/nahpu_dp"
license = "MIT"
keywords = ["nahpu", "frictionless", "data-package", "archive"]
categories = ["data-structures", "science"]
readme = "README.md"
include = ["src/**", "tests/**", "Cargo.toml", "README.md", "CHANGELOG.md"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
csv = "1.4"
nahpu_archive = { version = "0.2.0", path = "../nahpu_archive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
