[package]
name = "nahpu_dwc"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
zip = "8.6.0"

[build-dependencies]
heck = "0.5.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
sqlparser = "0.62.0"
