[package]
name = "nahpu_dwc"
version = "0.1.2"
edition = "2024"
authors = ["Heru Handika <herubiolog@gmail.com>"]
homepage = "https://www.nahpu.app/"
description = "A utility crate for mapping and converting Nahpu project data into Darwin Core JSON format."
repository = "https://github.com/hhandika/nahpu_api"
license = "MIT"
keywords = ["nahpu", "darwin-core", "dwc", "biodiversity"]
categories = ["data-structures", "science"]
readme = "README.md"

[dependencies]
csv = "1.4.0"
quick-xml = "0.36.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
zip = "8.6.0"
nahpu_db = { version = "0.5.0", path = "../nahpu_db" }

[dev-dependencies]
tempfile = "3.10.0"
