[package]
name = "nahpu_gis"
version = "0.1.0"
edition = "2024"

[dependencies]
dbase = "0.7.0"
geojson = "1.0.0"
kml = { version = "0.13.0", default-features = false }
nahpu_archive = { version = "0.1.0", path = "../nahpu_archive" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shapefile = "0.8.0"
tempfile = "3.27.0"
