[package]
name = "nahpu_gis"
version = "0.1.1"
edition = "2024"
authors = ["Heru Handika <herubiolog@gmail.com>"]
description = "A utility crate for spatial analysis and GIS data processing."
repository = "https://github.com/hhandika/nahpu_api"
license = "MIT"
keywords = ["spatial", "gis", "geojson", "kml", "shapefile"]
categories = ["science"]
readme = "README.md"
homepage = "https://www.nahpu.app/"

[dependencies]
dbase = "0.7.0"
geo = "0.29"
geojson = "1.0.0"
kml = { version = "0.13.0", default-features = false }
nahpu_archive = { version = "0.1.0", path = "../nahpu_archive" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shapefile = "0.8.0"
tempfile = "3.27.0"
utm = "0.1"
