[package]
name = "nahpu_stats"
version = "0.1.0"
edition = "2024"
authors = ["Heru Handika <[EMAIL_ADDRESS]>"]
description = "A utility crate for NAHPU projects that handles data manipulation and analysis."
repository = "https://github.com/hhandika/nahpu_api"
license = "MIT"
keywords = ["nahpu", "statistics", "natural-history", "morphometrics"]
categories = ["science"]
readme = "README.md"
homepage = "https://www.nahpu.app/"


